--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hongkong-vue",
+  "name": "vue-test",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "xue.zhang <angelina.x.zhang@pwc.com>",
+  "author": "angelina zhang",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
