--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-multiselect": "^2.0.8",
     "vue-router": "^3.0.1",
+    "vue2-dropzone": "^3.0.3",
     "vuetify": "^0.17.4"
   },
   "devDependencies": {
